<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_hiden"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_emerald" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp" >

        <ImageView
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_login_plus" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_item_h"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_user" />

            <EditText
                android:id="@+id/username"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/input_username"
                android:inputType="textVisiblePassword"
                android:textColorHint="@color/text_hint" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#553f3b3a" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_item_h"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_change_password" />

            <EditText
                android:id="@+id/password"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColorHint="@color/text_hint" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#553f3b3a" />

        <TextView
            android:id="@+id/tx_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/forget_psd"
            android:textColor="@drawable/selector_login_text"
            android:textSize="16sp" 
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" 
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_login_h"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_btn_emerald_bg"
            android:text="@string/btn_login"
            android:textColor="@drawable/selector_btn_emerald_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_login_h"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_btn_register_emerald_bg"
            android:text="@string/btn_register"
            android:textColor="@drawable/selector_btn_register_emerald_text"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>